[package]
name = "egui_dnd"
version = "0.3.0"
edition = "2021"
authors = ["Lucas Meurer"]
repository = "https://github.com/lilly-lizard/egui_dnd-fork"
keywords = ["egui", "drag", "drop", "ui"]
description = "A drag and drop library for egui"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27"
epaint = { version = "0.27", default-features = false }

[dev-dependencies]
egui_extras = "0.27"
color-hex = "0.2.0"
egui = { version = "0.27", features = ["color-hex"] }
eframe = "0.27"

#[workspace]
#members = ["fancy-example"]
