[package]
name = "egui_dnd"
version = "0.3.0"
edition = "2021"
authors = ["Lucas Meurer"]
repository = "https://github.com/lilly-lizard/egui_dnd-fork"
keywords = ["egui", "drag", "drop", "ui"]
description = "A drag and drop library for egui"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/emilk/egui.git#02e79527", version = "0.28" }
epaint = { git = "https://github.com/emilk/egui.git#02e79527", version = "0.28", default-features = false }
